[package]
name = "chezmoi-tui"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A visual TUI wrapper around chezmoi"
repository = "https://github.com/tetsuya-dev-jp/chezmoi-tui"
homepage = "https://github.com/tetsuya-dev-jp/chezmoi-tui"
documentation = "https://docs.rs/chezmoi-tui"
readme = "README.md"
keywords = ["chezmoi", "dotfiles", "tui", "cli", "ratatui"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"

[dev-dependencies]
pretty_assertions = "1.4"
